Fix unwanted text wrapping for the body-shape captions

--- a/src/ui/scss/himation/components/_body-shape.scss
+++ b/src/ui/scss/himation/components/_body-shape.scss
@@ -22,6 +22,7 @@ $_body-shape--image-height: 19em;
 .c--body-shape__example__caption {
   display: block;
   margin-top: 1em;
+  white-space: nowrap;
 }
 
 .c--body-shape__input {
